tests/reference/asr-test_builtin_len-55b0dec.stderr
syntax error: Token '' (of type 'dedent') is unexpected here
  --> tests/../integration_tests/test_builtin_len.py:24:4
   |
24 |     assert len(l3) == 50
   |    ^ 
